--- a/techRandomSS.html
+++ b/techRandomSS.html
@@ -89,25 +89,25 @@
             <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-8">
                 <!-- Team Member Card -->
                 <div class="text-center bg-white dark:bg-gray-800 p-6 rounded-xl shadow-lg transform hover:scale-105 transition-transform duration-300 bg-change">
-                    <img class="w-32 h-32 rounded-full mx-auto mb-4 object-cover unselectable" oncontextmenu="return false;" src="mario.png" alt="Foto de Mario Martinez">
+                    <img class="w-32 h-32 rounded-full mx-auto mb-4 object-cover unselectable" oncontextmenu="return false;" src="presentacionProyecto/mario.png" alt="Foto de Mario Martinez">
                     <h4 class="text-xl font-semibold">Mario Martinez</h4>
                     <p class="text-gray-500 dark:text-gray-400">Analista/Programador Genexus</p>
                 </div>
                 <!-- Team Member Card -->
                 <div class="text-center bg-white dark:bg-gray-800 p-6 rounded-xl shadow-lg transform hover:scale-105 transition-transform duration-300 bg-change">
-                    <img class="w-32 h-32 rounded-full mx-auto mb-4 object-cover unselectable" oncontextmenu="return false;" src="bruno.png" alt="Foto de Bruno Gonzalez">
+                    <img class="w-32 h-32 rounded-full mx-auto mb-4 object-cover unselectable" oncontextmenu="return false;" src="presentacionProyecto/bruno.png" alt="Foto de Bruno Gonzalez">
                     <h4 class="text-xl font-semibold">Bruno Gonzalez</h4>
                     <p class="text-gray-500 dark:text-gray-400">DevOps | SysAdmin</p>
                 </div>
                 <!-- Team Member Card -->
                 <div class="text-center bg-white dark:bg-gray-800 p-6 rounded-xl shadow-lg transform hover:scale-105 transition-transform duration-300 bg-change">
-                    <img class="w-32 h-32 rounded-full mx-auto mb-4 object-cover unselectable" oncontextmenu="return false;" src="kamila.png" alt="Foto de Kamila Quintana">
+                    <img class="w-32 h-32 rounded-full mx-auto mb-4 object-cover unselectable" oncontextmenu="return false;" src="presentacionProyecto/kamila.png" alt="Foto de Kamila Quintana">
                     <h4 class="text-xl font-semibold">Kamila Quintana</h4>
                     <p class="text-gray-500 dark:text-gray-400">Full-Stack Developer</p>
                 </div>
                 <!-- Team Member Card -->
                 <div class="text-center bg-white dark:bg-gray-800 p-6 rounded-xl shadow-lg transform hover:scale-105 transition-transform duration-300 bg-change">
-                    <img class="w-32 h-32 rounded-full mx-auto mb-4 object-cover unselectable" oncontextmenu="return false;" src="william.png" alt="Foto de William Machado">
+                    <img class="w-32 h-32 rounded-full mx-auto mb-4 object-cover unselectable" oncontextmenu="return false;" src="presentacionProyecto/william.png" alt="Foto de William Machado">
                     <h4 class="text-xl font-semibold">William Machado</h4>
                     <p class="text-gray-500 dark:text-gray-400">Docente de Inglés</p>
                 </div>
@@ -145,7 +145,7 @@
         <section class="mb-16">
             <h2 class="text-3xl font-bold text-center mb-10">Diagrama de Contexto</h2>
              <div class="bg-white dark:bg-gray-800 p-4 md:p-8 rounded-xl shadow-2xl bg-change">
-                <img src="diagrama.png" alt="Diagrama de contexto del sistema" class="w-full h-auto rounded-lg unselectable" oncontextmenu="return false;" onerror="this.onerror=null;this.src='https://placehold.co/1200x600/CCCCCC/333333?text=Error+al+cargar+la+imagen';">
+                <img src="presentacionProyecto/diagrama.png" alt="Diagrama de contexto del sistema" class="w-full h-auto rounded-lg unselectable" oncontextmenu="return false;" onerror="this.onerror=null;this.src='https://placehold.co/1200x600/CCCCCC/333333?text=Error+al+cargar+la+imagen';">
             </div>
         </section>
 
@@ -159,7 +159,7 @@
                     </p>
                 </div>
                 <div class="mt-8 md:mt-0">
-                    <img src="utec.png" alt="Imagen de la Universidad Tecnológica del Uruguay" class="w-full h-auto rounded-lg shadow-md unselectable" oncontextmenu="return false;">
+                    <img src="presentacionProyecto/utec.png" alt="Imagen de la Universidad Tecnológica del Uruguay" class="w-full h-auto rounded-lg shadow-md unselectable" oncontextmenu="return false;">
                 </div>
             </div>
         </section>
