--- a/techRandomSS.html
+++ b/techRandomSS.html
@@ -159,7 +159,7 @@
                     </p>
                 </div>
                 <div class="mt-8 md:mt-0">
-                    <img src="utec.png" alt="Imagen de la Universidad Tecnológica del Uruguay" class="w-full h-auto rounded-lg shadow-md unselectable" oncontextmenu="return false;" onerror="this.onerror=null;this.src='https://placehold.co/600x400/CCCCCC/333333?text=Foto+no+disponible';">
+                    <img src="presentacionProyecto/utec.png" alt="Imagen de la Universidad Tecnológica del Uruguay" class="w-full h-auto rounded-lg shadow-md unselectable" oncontextmenu="return false;" onerror="this.onerror=null;this.src='https://placehold.co/600x400/CCCCCC/333333?text=Foto+no+disponible';">
                 </div>
             </div>
         </section>
@@ -169,7 +169,7 @@
     <!-- Footer -->
     <footer class="bg-white dark:bg-gray-800 mt-16 py-6 border-t border-gray-200 dark:border-gray-700 bg-change">
         <div class="container mx-auto px-6 text-center text-gray-500 dark:text-gray-400">
-            <p>&copy; 2025 | UTEC - Licenciatura en Tecnologías de la Información</p>
+            <p>&copy; 2024 | UTEC - Licenciatura en Tecnologías de la Información</p>
         </div>
     </footer>
 
