--- a/techRandomSS.html
+++ b/techRandomSS.html
@@ -145,7 +145,7 @@
         <section class="mb-16">
             <h2 class="text-3xl font-bold text-center mb-10">Diagrama de Contexto</h2>
              <div class="bg-white dark:bg-gray-800 p-4 md:p-8 rounded-xl shadow-2xl bg-change">
-                <img src="presentacionProyecto/diagrama.png" alt="Diagrama de contexto del sistema" class="w-full h-auto rounded-lg unselectable" oncontextmenu="return false;" onerror="this.onerror=null;this.src='https://placehold.co/1200x600/CCCCCC/333333?text=Diagrama+no+disponible';">
+                <img src="diagrama.png" alt="Diagrama de contexto del sistema" class="w-full h-auto rounded-lg unselectable" oncontextmenu="return false;" onerror="this.onerror=null;this.src='https://placehold.co/1200x600/CCCCCC/333333?text=Diagrama+no+disponible';">
             </div>
         </section>
 
@@ -159,7 +159,7 @@
                     </p>
                 </div>
                 <div class="mt-8 md:mt-0">
-                    <img src="presentacionProyecto/utec.png" alt="Imagen de la Universidad Tecnológica del Uruguay" class="w-full h-auto rounded-lg shadow-md unselectable" oncontextmenu="return false;" onerror="this.onerror=null;this.src='https://placehold.co/600x400/CCCCCC/333333?text=Foto+no+disponible';">
+                    <img src="utec.png" alt="Imagen de la Universidad Tecnológica del Uruguay" class="w-full h-auto rounded-lg shadow-md unselectable" oncontextmenu="return false;" onerror="this.onerror=null;this.src='https://placehold.co/600x400/CCCCCC/333333?text=Foto+no+disponible';">
                 </div>
             </div>
         </section>
@@ -169,7 +169,7 @@
     <!-- Footer -->
     <footer class="bg-white dark:bg-gray-800 mt-16 py-6 border-t border-gray-200 dark:border-gray-700 bg-change">
         <div class="container mx-auto px-6 text-center text-gray-500 dark:text-gray-400">
-            <p>&copy; 2024 | UTEC - Licenciatura en Tecnologías de la Información</p>
+            <p>&copy; 2025 | UTEC - Licenciatura en Tecnologías de la Información</p>
         </div>
     </footer>
 
