--- a/techRandomSS.html
+++ b/techRandomSS.html
@@ -89,25 +89,25 @@
             <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-8">
                 <!-- Team Member Card: object-cover ensures the image fills the circle without distortion -->
                 <div class="text-center bg-white dark:bg-gray-800 p-6 rounded-xl shadow-lg transform hover:scale-105 transition-transform duration-300 bg-change">
-                    <img class="w-32 h-32 rounded-full mx-auto mb-4 object-cover unselectable" oncontextmenu="return false;" src="presentacionProyecto/mario.png" alt="Foto de Mario Martinez" onerror="this.onerror=null;this.src='https://placehold.co/128x128/EFEFEF/333333?text=MM';">
+                    <img class="w-32 h-32 rounded-full mx-auto mb-4 object-cover unselectable" oncontextmenu="return false;" src="mario.png" alt="Foto de Mario Martinez" onerror="this.onerror=null;this.src='https://placehold.co/128x128/EFEFEF/333333?text=MM';">
                     <h4 class="text-xl font-semibold">Mario Martinez</h4>
                     <p class="text-gray-500 dark:text-gray-400">Analista/Programador Genexus</p>
                 </div>
                 <!-- Team Member Card -->
                 <div class="text-center bg-white dark:bg-gray-800 p-6 rounded-xl shadow-lg transform hover:scale-105 transition-transform duration-300 bg-change">
-                    <img class="w-32 h-32 rounded-full mx-auto mb-4 object-cover unselectable" oncontextmenu="return false;" src="presentacionProyecto/bruno.png" alt="Foto de Bruno Gonzalez" onerror="this.onerror=null;this.src='https://placehold.co/128x128/EFEFEF/333333?text=BG';">
+                    <img class="w-32 h-32 rounded-full mx-auto mb-4 object-cover unselectable" oncontextmenu="return false;" src="bruno.png" alt="Foto de Bruno Gonzalez" onerror="this.onerror=null;this.src='https://placehold.co/128x128/EFEFEF/333333?text=BG';">
                     <h4 class="text-xl font-semibold">Bruno Gonzalez</h4>
                     <p class="text-gray-500 dark:text-gray-400">DevOps | SysAdmin</p>
                 </div>
                 <!-- Team Member Card -->
                 <div class="text-center bg-white dark:bg-gray-800 p-6 rounded-xl shadow-lg transform hover:scale-105 transition-transform duration-300 bg-change">
-                    <img class="w-32 h-32 rounded-full mx-auto mb-4 object-cover unselectable" oncontextmenu="return false;" src="presentacionProyecto/kamila.png" alt="Foto de Kamila Quintana" onerror="this.onerror=null;this.src='https://placehold.co/128x128/EFEFEF/333333?text=KQ';">
+                    <img class="w-32 h-32 rounded-full mx-auto mb-4 object-cover unselectable" oncontextmenu="return false;" src="kamila.png" alt="Foto de Kamila Quintana" onerror="this.onerror=null;this.src='https://placehold.co/128x128/EFEFEF/333333?text=KQ';">
                     <h4 class="text-xl font-semibold">Kamila Quintana</h4>
                     <p class="text-gray-500 dark:text-gray-400">Full-Stack Developer</p>
                 </div>
                 <!-- Team Member Card -->
                 <div class="text-center bg-white dark:bg-gray-800 p-6 rounded-xl shadow-lg transform hover:scale-105 transition-transform duration-300 bg-change">
-                    <img class="w-32 h-32 rounded-full mx-auto mb-4 object-cover unselectable" oncontextmenu="return false;" src="presentacionProyecto/william.png" alt="Foto de William Machado" onerror="this.onerror=null;this.src='https://placehold.co/128x128/EFEFEF/333333?text=WM';">
+                    <img class="w-32 h-32 rounded-full mx-auto mb-4 object-cover unselectable" oncontextmenu="return false;" src="william.png" alt="Foto de William Machado" onerror="this.onerror=null;this.src='https://placehold.co/128x128/EFEFEF/333333?text=WM';">
                     <h4 class="text-xl font-semibold">William Machado</h4>
                     <p class="text-gray-500 dark:text-gray-400">Docente de Inglés</p>
                 </div>
