--- a/techRandomSS.html
+++ b/techRandomSS.html
@@ -87,27 +87,27 @@
         <section class="mb-16">
             <h2 class="text-3xl font-bold text-center mb-10">Nuestro Equipo</h2>
             <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-8">
-                <!-- Team Member Card: object-cover ensures the image fills the circle without distortion -->
+                <!-- Team Member Card: Adjusted for rectangular images -->
                 <div class="text-center bg-white dark:bg-gray-800 p-6 rounded-xl shadow-lg transform hover:scale-105 transition-transform duration-300 bg-change">
-                    <img class="w-32 h-32 rounded-full mx-auto mb-4 object-cover unselectable" oncontextmenu="return false;" src="mario.png" alt="Foto de Mario Martinez" onerror="this.onerror=null;this.src='https://placehold.co/128x128/EFEFEF/333333?text=MM';">
+                    <img class="w-40 h-60 rounded-xl mx-auto mb-4 object-cover unselectable" oncontextmenu="return false;" src="mario.png" alt="Foto de Mario Martinez" onerror="this.onerror=null;this.src='https://placehold.co/164x242/EFEFEF/333333?text=MM';">
                     <h4 class="text-xl font-semibold">Mario Martinez</h4>
                     <p class="text-gray-500 dark:text-gray-400">Analista/Programador Genexus</p>
                 </div>
                 <!-- Team Member Card -->
                 <div class="text-center bg-white dark:bg-gray-800 p-6 rounded-xl shadow-lg transform hover:scale-105 transition-transform duration-300 bg-change">
-                    <img class="w-32 h-32 rounded-full mx-auto mb-4 object-cover unselectable" oncontextmenu="return false;" src="bruno.png" alt="Foto de Bruno Gonzalez" onerror="this.onerror=null;this.src='https://placehold.co/128x128/EFEFEF/333333?text=BG';">
+                    <img class="w-40 h-60 rounded-xl mx-auto mb-4 object-cover unselectable" oncontextmenu="return false;" src="bruno.png" alt="Foto de Bruno Gonzalez" onerror="this.onerror=null;this.src='https://placehold.co/164x242/EFEFEF/333333?text=BG';">
                     <h4 class="text-xl font-semibold">Bruno Gonzalez</h4>
                     <p class="text-gray-500 dark:text-gray-400">DevOps | SysAdmin</p>
                 </div>
                 <!-- Team Member Card -->
                 <div class="text-center bg-white dark:bg-gray-800 p-6 rounded-xl shadow-lg transform hover:scale-105 transition-transform duration-300 bg-change">
-                    <img class="w-32 h-32 rounded-full mx-auto mb-4 object-cover unselectable" oncontextmenu="return false;" src="kamila.png" alt="Foto de Kamila Quintana" onerror="this.onerror=null;this.src='https://placehold.co/128x128/EFEFEF/333333?text=KQ';">
+                    <img class="w-40 h-60 rounded-xl mx-auto mb-4 object-cover unselectable" oncontextmenu="return false;" src="kamila.png" alt="Foto de Kamila Quintana" onerror="this.onerror=null;this.src='https://placehold.co/164x242/EFEFEF/333333?text=KQ';">
                     <h4 class="text-xl font-semibold">Kamila Quintana</h4>
                     <p class="text-gray-500 dark:text-gray-400">Full-Stack Developer</p>
                 </div>
                 <!-- Team Member Card -->
                 <div class="text-center bg-white dark:bg-gray-800 p-6 rounded-xl shadow-lg transform hover:scale-105 transition-transform duration-300 bg-change">
-                    <img class="w-32 h-32 rounded-full mx-auto mb-4 object-cover unselectable" oncontextmenu="return false;" src="william.png" alt="Foto de William Machado" onerror="this.onerror=null;this.src='https://placehold.co/128x128/EFEFEF/333333?text=WM';">
+                    <img class="w-40 h-60 rounded-xl mx-auto mb-4 object-cover unselectable" oncontextmenu="return false;" src="william.png" alt="Foto de William Machado" onerror="this.onerror=null;this.src='https://placehold.co/164x242/EFEFEF/333333?text=WM';">
                     <h4 class="text-xl font-semibold">William Machado</h4>
                     <p class="text-gray-500 dark:text-gray-400">Docente de Inglés</p>
                 </div>
@@ -169,7 +169,7 @@
     <!-- Footer -->
     <footer class="bg-white dark:bg-gray-800 mt-16 py-6 border-t border-gray-200 dark:border-gray-700 bg-change">
         <div class="container mx-auto px-6 text-center text-gray-500 dark:text-gray-400">
-            <p>&copy; 2025 | UTEC - Licenciatura en Tecnologías de la Información</p>
+            <p>&copy; 2024 | UTEC - Licenciatura en Tecnologías de la Información</p>
         </div>
     </footer>
 
@@ -180,10 +180,8 @@
             const lightIcon = document.getElementById('theme-toggle-light-icon');
             const darkIcon = document.getElementById('theme-toggle-dark-icon');
             
-            // This variable will hold the current theme state
             let isDark;
 
-            // Function to apply theme and update icon
             function applyTheme() {
                 if (isDark) {
                     document.documentElement.classList.add('dark');
@@ -196,11 +194,10 @@
                 }
             }
 
-            // Function to toggle theme, apply it, and save preference
             function toggleTheme() {
-                isDark = !isDark; // Flip the state
-                localStorage.setItem('theme', isDark ? 'dark' : 'light'); // Save the new state
-                applyTheme(); // Apply the visual changes
+                isDark = !isDark;
+                localStorage.setItem('theme', isDark ? 'dark' : 'light');
+                applyTheme();
             }
 
             // Initialize theme on page load
