--- a/techRandomSS.html
+++ b/techRandomSS.html
@@ -93,19 +93,16 @@
                     <h4 class="text-xl font-semibold">Mario Martinez</h4>
                     <p class="text-gray-500 dark:text-gray-400">Analista/Programador Genexus</p>
                 </div>
-                <!-- Team Member Card -->
                 <div class="text-center bg-white dark:bg-gray-800 p-6 rounded-xl shadow-lg transform hover:scale-105 transition-transform duration-300 bg-change">
                     <img class="w-40 h-60 rounded-xl mx-auto mb-4 object-cover unselectable" oncontextmenu="return false;" src="bruno.png" alt="Foto de Bruno Gonzalez" onerror="this.onerror=null;this.src='https://placehold.co/164x242/EFEFEF/333333?text=BG';">
                     <h4 class="text-xl font-semibold">Bruno Gonzalez</h4>
                     <p class="text-gray-500 dark:text-gray-400">DevOps | SysAdmin</p>
                 </div>
-                <!-- Team Member Card -->
                 <div class="text-center bg-white dark:bg-gray-800 p-6 rounded-xl shadow-lg transform hover:scale-105 transition-transform duration-300 bg-change">
                     <img class="w-40 h-60 rounded-xl mx-auto mb-4 object-cover unselectable" oncontextmenu="return false;" src="kamila.png" alt="Foto de Kamila Quintana" onerror="this.onerror=null;this.src='https://placehold.co/164x242/EFEFEF/333333?text=KQ';">
                     <h4 class="text-xl font-semibold">Kamila Quintana</h4>
                     <p class="text-gray-500 dark:text-gray-400">Full-Stack Developer</p>
                 </div>
-                <!-- Team Member Card -->
                 <div class="text-center bg-white dark:bg-gray-800 p-6 rounded-xl shadow-lg transform hover:scale-105 transition-transform duration-300 bg-change">
                     <img class="w-40 h-60 rounded-xl mx-auto mb-4 object-cover unselectable" oncontextmenu="return false;" src="william.png" alt="Foto de William Machado" onerror="this.onerror=null;this.src='https://placehold.co/164x242/EFEFEF/333333?text=WM';">
                     <h4 class="text-xl font-semibold">William Machado</h4>
@@ -114,29 +111,59 @@
             </div>
         </section>
 
-        <!-- Value Proposition Section -->
+        <!-- NEW Value Proposition Section -->
         <section class="mb-16">
             <h2 class="text-3xl font-bold text-center mb-10">Propuesta de Valor</h2>
-            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
-                 <div class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-md bg-change">
-                    <h4 class="font-bold text-lg mb-2">✔️ Interacción por Voz</h4>
-                    <p>Comandos completamente por voz, tanto para navegación como para selección de productos.</p>
-                </div>
-                <div class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-md bg-change">
-                    <h4 class="font-bold text-lg mb-2">✔️ Accesibilidad</h4>
-                    <p>Diseño inclusivo pensado desde cero para usuarios en situación de discapacidad visual.</p>
-                </div>
-                <div class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-md bg-change">
-                    <h4 class="font-bold text-lg mb-2">✔️ Autonomía</h4>
-                    <p>Elimina la necesidad de asistencia de terceros para una acción cotidiana como hacer las compras.</p>
-                </div>
-                <div class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-md bg-change">
-                    <h4 class="font-bold text-lg mb-2">✔️ Innovación</h4>
-                    <p>Solución innovadora a nivel nacional, validada con nuestro cliente y la comunidad.</p>
-                </div>
-                 <div class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-md bg-change">
-                    <h4 class="font-bold text-lg mb-2">✔️ Adaptabilidad</h4>
-                    <p>Arquitectura flexible que permite integrar múltiples tiendas o catálogos de otros sectores.</p>
+            <div class="bg-white dark:bg-gray-800 rounded-xl shadow-lg bg-change overflow-hidden">
+                <div class="grid md:grid-cols-2 items-center">
+                    <!-- Left Column: Image -->
+                    <div class="p-8 text-center flex flex-col items-center justify-center">
+                        <img src="cliente.png" alt="Ilustración del cliente" class="w-full max-w-sm mx-auto unselectable" oncontextmenu="return false;" onerror="this.onerror=null;this.src='https://placehold.co/400x400/CCCCCC/333333?text=Cliente';">
+                        <h3 class="text-2xl font-bold mt-4">CLIENTE</h3>
+                    </div>
+                    <!-- Right Column: Details -->
+                    <div class="p-8">
+                        <!-- Trabajos del Cliente -->
+                        <div class="flex items-start gap-4 mb-6">
+                            <div class="flex-shrink-0 w-12 h-12 bg-blue-100 dark:bg-blue-900 rounded-lg flex items-center justify-center">
+                                <svg class="w-6 h-6 text-blue-600 dark:text-blue-300" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-6 9l2 2 4-4"></path></svg>
+                            </div>
+                            <div>
+                                <h4 class="font-bold text-lg text-blue-800 dark:text-blue-300">TRABAJOS DEL CLIENTE</h4>
+                                <p>Realizar compras online de productos básicos con comodidad y autonomía.</p>
+                            </div>
+                        </div>
+                        <!-- Frustraciones -->
+                        <div class="flex items-start gap-4 mb-6">
+                            <div class="flex-shrink-0 w-12 h-12 bg-red-100 dark:bg-red-900 rounded-lg flex items-center justify-center">
+                                <svg class="w-6 h-6 text-red-600 dark:text-red-300" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.172 16.172a4 4 0 015.656 0M9 10h.01M15 10h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+                            </div>
+                            <div>
+                                <h4 class="font-bold text-lg text-red-800 dark:text-red-300">FRUSTRACIONES</h4>
+                                <ul class="list-disc list-inside">
+                                    <li>Nula accesibilidad autónoma.</li>
+                                    <li>Proveedores sin accesibilidad para personas con discapacidades visuales en locales.</li>
+                                    <li>Riesgo de errores al seleccionar o pagar productos.</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <!-- Beneficios Esperados -->
+                        <div class="flex items-start gap-4">
+                             <div class="flex-shrink-0 w-12 h-12 bg-green-100 dark:bg-green-900 rounded-lg flex items-center justify-center">
+                                <svg class="w-6 h-6 text-green-600 dark:text-green-300" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v13m0-13V6a2 2 0 112 2h-2zm0 0V5.5A2.5 2.5 0 109.5 8H12zm-7 4h14M5 12a2 2 0 110-4h14a2 2 0 110 4H5z"></path></svg>
+                            </div>
+                            <div>
+                                <h4 class="font-bold text-lg text-green-800 dark:text-green-300">BENEFICIOS ESPERADOS</h4>
+                                 <ul class="list-disc list-inside">
+                                    <li>Poder realizar compras sin ayuda.</li>
+                                    <li>Facilidad de uso con comandos de voz.</li>
+                                    <li>Mayor autonomía y privacidad.</li>
+                                    <li>Integración con servicios de entrega o retiro en tienda.</li>
+                                    <li>Interacción amigable y personalizada con la app.</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -174,38 +201,43 @@
     </footer>
 
     <script>
-        // Wait for the DOM to be fully loaded before running the script
-        window.addEventListener('DOMContentLoaded', (event) => {
+        // CORRECTED Dark Mode Script
+        window.addEventListener('DOMContentLoaded', () => {
             const themeToggleButton = document.getElementById('theme-toggle-button');
             const lightIcon = document.getElementById('theme-toggle-light-icon');
             const darkIcon = document.getElementById('theme-toggle-dark-icon');
-            
-            let isDark;
+            const htmlEl = document.documentElement;
 
-            function applyTheme() {
+            // Function to apply theme based on the 'isDark' parameter
+            const applyTheme = (isDark) => {
                 if (isDark) {
-                    document.documentElement.classList.add('dark');
-                    lightIcon.classList.add('hidden');
+                    htmlEl.classList.add('dark');
                     darkIcon.classList.remove('hidden');
+                    lightIcon.classList.add('hidden');
                 } else {
-                    document.documentElement.classList.remove('dark');
+                    htmlEl.classList.remove('dark');
                     darkIcon.classList.add('hidden');
                     lightIcon.classList.remove('hidden');
                 }
-            }
+            };
 
-            function toggleTheme() {
-                isDark = !isDark;
-                localStorage.setItem('theme', isDark ? 'dark' : 'light');
-                applyTheme();
-            }
+            // Function to toggle the theme
+            const toggleTheme = () => {
+                // Check if 'dark' class is currently on the html element
+                const isCurrentlyDark = htmlEl.classList.contains('dark');
+                // Set the theme to the opposite
+                localStorage.setItem('theme', isCurrentlyDark ? 'light' : 'dark');
+                // Apply the new theme
+                applyTheme(!isCurrentlyDark);
+            };
 
-            // Initialize theme on page load
-            isDark = localStorage.getItem('theme') === 'dark' || 
-                     (localStorage.getItem('theme') === null && window.matchMedia('(prefers-color-scheme: dark)').matches);
-            applyTheme();
+            // Set initial theme on page load
+            const initialThemeIsDark = localStorage.getItem('theme') === 'dark' || 
+                                     (localStorage.getItem('theme') === null && window.matchMedia('(prefers-color-scheme: dark)').matches);
+            
+            applyTheme(initialThemeIsDark);
 
-            // Add event listener to the button
+            // Add the event listener to the button
             themeToggleButton.addEventListener('click', toggleTheme);
         });
     </script>
