--- a/techRandomSSTest.html
+++ b/techRandomSSTest.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="es"> <!-- La clase 'dark' se añadirá o quitará con JavaScript -->
+<html lang="es"> <!-- La clase 'dark' se añadirá dinámicamente -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto Universitario - Asistente de Compras por Voz - UTEC</title>
+    <!-- SEO: Meta descripción para mejorar la accesibilidad y el posicionamiento en buscadores -->
+    <meta name="description" content="Proyecto universitario de un Asistente de Compras por Voz, enfocado en la accesibilidad para personas con discapacidad visual, desarrollado por estudiantes de la UTEC.">
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -87,7 +89,7 @@
         <section class="mb-16" aria-labelledby="team-title">
             <h2 id="team-title" class="text-3xl font-bold text-center mb-10 text-gray-900 dark:text-white">Nuestro Equipo</h2>
             <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-8">
-                <!-- Se movió la animación de hover al contenedor ARTICLE para evitar conflictos -->
+                <!-- Se movió la animación de hover al contenedor ARTICLE y se usa 'group' para aplicarla a la imagen -->
                 <article class="text-center bg-white dark:bg-slate-800 p-6 rounded-xl shadow-lg transition-shadow duration-300 hover:shadow-2xl bg-change group">
                     <div class="overflow-hidden rounded-full mx-auto w-32 h-32 mb-4">
                         <img class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" src="mario.png" alt="Foto de Mario Martinez, miembro del equipo." onerror="this.onerror=null;this.src='https://placehold.co/128x128/EFEFEF/333333?text=MM';">
