--- a/techRandomSS.html
+++ b/techRandomSS.html
@@ -50,11 +50,13 @@
     <!-- HEADER: Contiene la navegación principal del sitio. Se usa la etiqueta <header> para la semántica. -->
     <header class="bg-white/80 dark:bg-slate-900/80 backdrop-blur-sm shadow-md bg-change fixed w-full top-0 z-20 border-b border-gray-200 dark:border-slate-800">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="#" class="flex items-center space-x-3" aria-label="Asistente de Compras - Página de inicio">
-                <svg class="w-10 h-10 text-blue-600 dark:text-sky-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
-                <span class="text-xl md:text-2xl font-bold text-gray-800 dark:text-white">Asistente de Compras</span>
-            </a>
             
+           <a href="#" class="flex items-center space-x-3" aria-label="Asistente de Compras - Página de inicio">
+            <img src="accesibi.png" alt="Icono de Accesibilidad - ONU 2015" class="w-10 h-10 rounded-full" />
+            <span class="text-xl md:text-2xl font-bold text-gray-800 dark:text-white">Asistente de Compras</span>
+           </a>
+
+
             <!-- NAV: Etiqueta semántica para la navegación principal. -->
             <nav aria-label="Navegación principal">
                 <div class="flex items-center gap-4">
