--- a/techRandomSS.html
+++ b/techRandomSS.html
@@ -52,7 +52,7 @@
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
             
            <a href="#" class="flex items-center space-x-3" aria-label="Asistente de Compras - Página de inicio">
-            <img src="accesibi.png" alt="Icono de Accesibilidad - ONU 2015" class="w-10 h-10 rounded-full" />
+            <img src="accesigris.png" alt="Icono de Accesibilidad - ONU 2015" class="w-10 h-10 rounded-full" />
             <span class="text-xl md:text-2xl font-bold text-gray-800 dark:text-white">Asistente de Compras</span>
            </a>
 
