--- a/techRandomSS.html
+++ b/techRandomSS.html
@@ -52,7 +52,7 @@
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
             
            <a href="#" class="flex items-center space-x-3" aria-label="Asistente de Compras - Página de inicio">
-            <img src="accesigris.png" alt="Icono de Accesibilidad - ONU 2015" class="w-10 h-10 rounded-full" />
+            <img src="icon-512.png" alt="Icono de Accesibilidad - ONU 2015" class="w-10 h-10 rounded-full" />
             <span class="text-xl md:text-2xl font-bold text-gray-800 dark:text-white">Asistente de Compras</span>
            </a>
 
@@ -73,16 +73,19 @@
     <!-- MAIN: Contenedor principal para el contenido único de la página. -->
     <main class="container mx-auto px-6 py-24 pt-32">
         
-        <!-- SECTION: Agrupa el contenido introductorio. aria-labelledby conecta el título con la sección. -->
-        <section class="text-center mb-16" aria-labelledby="hero-title">
-            <div class="flex justify-center items-center gap-4">
-                <h1 id="hero-title" class="text-3xl md:text-5xl font-extrabold mb-4 text-gray-900 dark:text-white">Asistente de Compras por Voz</h1>
-                <svg aria-hidden="true" class="w-10 h-10 md:w-12 md:h-12 text-blue-500 dark:text-sky-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2zm9 7h-6v13h-2v-6h-2v6H9V9H3V7h18v2z"/></svg>
-            </div>
-            <p class="text-lg md:text-xl max-w-3xl mx-auto text-gray-600 dark:text-slate-400">
-                Un proyecto de la Licenciatura en TI de UTEC para mejorar la accesibilidad en servicios de compra digital.
-            </p>
-        </section>
+       <!-- SECTION: Agrupa el contenido introductorio. aria-labelledby conecta el título con la sección. -->
+    <section class="text-center mb-16" aria-labelledby="hero-title">
+        <div class="flex justify-center items-center gap-4">
+            <h1 id="hero-title" class="text-3xl md:text-5xl font-extrabold mb-4 text-gray-900 dark:text-white">
+                Asistente de Compras por Voz
+            </h1>
+            <img src="accesigris.png" alt="Logo Accesibilidad" class="w-10 h-10 md:w-12 md:h-12 object-contain" />
+        </div>
+        <p class="text-lg md:text-xl max-w-3xl mx-auto text-gray-600 dark:text-slate-400">
+            Un proyecto de la Licenciatura en TI de UTEC para mejorar la accesibilidad en servicios de compra digital.
+        </p>
+    </section>
+
 
         <!-- SECTION: Agrupa los detalles clave del proyecto. -->
         <section class="grid md:grid-cols-3 gap-8 mb-16" aria-label="Detalles del proyecto">
