--- a/techRandomSS.html
+++ b/techRandomSS.html
@@ -56,6 +56,9 @@
             <span class="text-xl md:text-2xl font-bold text-gray-800 dark:text-white">Asistente de Compras</span>
            </a>
 
+            <a href="presentacion.html" class="text-sm font-medium text-gray-600 dark:text-slate-300 hover:text-blue-600 dark:hover:text-sky-400 transition-colors">
+              Ver presentación
+            </a>
 
             <!-- NAV: Etiqueta semántica para la navegación principal. -->
             <nav aria-label="Navegación principal">
