--- a/presentacion.html
+++ b/presentacion.html
@@ -7,6 +7,14 @@
   <script>
     tailwind.config = { darkMode: 'class' };
   </script>
+
+  <style>
+  :fullscreen img {
+    max-height: 100vh;
+    object-fit: contain;
+  }
+</style>
+
   <script type="text/javascript">document.oncontextmenu = function(){return false;}</script>
 </head>
 <body class="bg-gray-50 dark:bg-slate-900 text-gray-800 dark:text-white">
@@ -76,11 +84,15 @@
     };
 
     fullscreenBtn.onclick = () => {
-      const el = document.getElementById('slide-container');
-      if (el.requestFullscreen) el.requestFullscreen();
-      else if (el.webkitRequestFullscreen) el.webkitRequestFullscreen();
-      else if (el.msRequestFullscreen) el.msRequestFullscreen();
-    };
+    if (!document.fullscreenElement) {
+      document.documentElement.requestFullscreen();
+      fullscreenBtn.textContent = 'Salir de pantalla completa';
+    } else {
+      document.exitFullscreen();
+      fullscreenBtn.textContent = 'Pantalla completa';
+    }
+  };
+
   </script>
 
 <script>
