--- a/presentacion.html
+++ b/presentacion.html
@@ -8,12 +8,17 @@
     tailwind.config = { darkMode: 'class' };
   </script>
 
-  <style>
-  :fullscreen img {
-    max-height: 100vh;
+<style>
+  :fullscreen img,
+  :-webkit-full-screen img {
+    width: 100%;
+    height: 100vh;
     object-fit: contain;
+    max-width: unset;
+    max-height: unset;
   }
 </style>
+
 
   <script type="text/javascript">document.oncontextmenu = function(){return false;}</script>
 </head>
@@ -23,7 +28,7 @@
     <h1 class="text-3xl font-bold mb-8 text-center">Presentación del Proyecto</h1>
 
     <div id="slide-container" class="flex flex-col items-center">
-      <img id="slide" src="1.png" alt="Diapositiva actual" class="w-full max-w-4xl rounded shadow-md">
+     <img id="slide" src="1.png" alt="Diapositiva actual" class="w-full object-contain rounded shadow-md transition-all duration-300" />
 
       <div class="mt-6 flex flex-wrap justify-center gap-4">
         <button id="prev-slide" class="bg-gray-300 dark:bg-slate-700 px-4 py-2 rounded hover:bg-gray-400 dark:hover:bg-slate-600">
