--- a/presentacion.html
+++ b/presentacion.html
@@ -8,52 +8,43 @@
     tailwind.config = { darkMode: 'class' };
   </script>
 
-<style>
-  :fullscreen #slide-controls,
-  :-webkit-full-screen #slide-controls {
-    position: fixed;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 50;
-    background-color: rgba(255, 255, 255, 0.9);
-    padding: 0.5rem 1rem;
-    border-radius: 0.75rem;
-    box-shadow: 0 2px 12px rgba(0, 0, 0, 0.3);
-  }
+  <style>
+    :fullscreen #slide {
+      width: 100%;
+      height: 100vh;
+      object-fit: contain;
+    }
 
-  :fullscreen body {
-    background: black;
-  }
-</style>
-
-
+    :fullscreen body {
+      background: black;
+    }
+  </style>
 
   <script type="text/javascript">document.oncontextmenu = function(){return false;}</script>
 </head>
 <body class="bg-gray-50 dark:bg-slate-900 text-gray-800 dark:text-white">
 
-<main class="min-h-screen flex flex-col justify-center items-center px-6">
+  <main class="min-h-screen flex flex-col justify-center items-center px-6">
     <h1 class="text-3xl font-bold mb-8 text-center">Presentación del Proyecto</h1>
 
     <div id="slide-container" class="flex flex-col items-center">
-     <img id="slide" src="1.png" alt="Diapositiva actual" class="w-full object-contain rounded shadow-md transition-all duration-300" />
-
-    <div id="slide-controls" class="mt-6 flex flex-wrap justify-center gap-4 transition-all">
-        <button id="prev-slide" class="bg-gray-300 dark:bg-slate-700 px-4 py-2 rounded hover:bg-gray-400 dark:hover:bg-slate-600">
-          ← Anterior
-        </button>
-        <button id="next-slide" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">
-          Siguiente →
-        </button>
-        <button id="fullscreen-btn" class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">
-          Pantalla completa
-        </button>
-      </div>
-
+      <img id="slide" src="1.png" alt="Diapositiva actual" class="w-full max-w-5xl object-contain rounded shadow-md transition-all duration-300" />
       <p id="slide-indicator" class="mt-2 text-sm text-gray-500 dark:text-gray-400">1 / 10</p>
     </div>
   </main>
+
+  <!-- Botones flotantes de navegación -->
+  <div id="slide-controls" class="fixed bottom-6 left-1/2 -translate-x-1/2 flex flex-wrap justify-center gap-4 z-50">
+    <button id="prev-slide" class="bg-gray-300 dark:bg-slate-700 px-4 py-2 rounded hover:bg-gray-400 dark:hover:bg-slate-600">
+      ← Anterior
+    </button>
+    <button id="next-slide" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">
+      Siguiente →
+    </button>
+    <button id="fullscreen-btn" class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">
+      Pantalla completa
+    </button>
+  </div>
 
   <!-- Botón flotante de volver -->
   <a href="techRandomSS.html" class="fixed bottom-6 right-6 bg-blue-600 text-white px-4 py-2 rounded-full shadow-lg hover:bg-blue-700 transition z-50">
@@ -98,28 +89,34 @@
     };
 
     fullscreenBtn.onclick = () => {
-    const img = document.getElementById('slide');
-    if (!document.fullscreenElement) {
-      img.requestFullscreen();
-      fullscreenBtn.textContent = 'Salir de pantalla completa';
-    } else {
-      document.exitFullscreen();
-      fullscreenBtn.textContent = 'Pantalla completa';
-    }
-  };
+      const el = document.documentElement;
+      if (!document.fullscreenElement) {
+        el.requestFullscreen();
+        fullscreenBtn.textContent = 'Salir de pantalla completa';
+      } else {
+        document.exitFullscreen();
+        fullscreenBtn.textContent = 'Pantalla completa';
+      }
+    };
 
-
+    // Actualizar botón al salir de fullscreen
+    document.addEventListener('fullscreenchange', () => {
+      fullscreenBtn.textContent = document.fullscreenElement
+        ? 'Salir de pantalla completa'
+        : 'Pantalla completa';
+    });
   </script>
 
-<script>
-  const htmlEl = document.documentElement;
-  const savedTheme = localStorage.getItem('theme');
-  if (savedTheme === 'dark') {
-    htmlEl.classList.add('dark');
-  } else {
-    htmlEl.classList.remove('dark');
-  }
-</script>
+  <!-- Mantener modo oscuro si estaba activado -->
+  <script>
+    const htmlEl = document.documentElement;
+    const savedTheme = localStorage.getItem('theme');
+    if (savedTheme === 'dark') {
+      htmlEl.classList.add('dark');
+    } else {
+      htmlEl.classList.remove('dark');
+    }
+  </script>
 
 </body>
 </html>
