--- a/presentacion.html
+++ b/presentacion.html
@@ -30,7 +30,7 @@
 
   <main class="min-h-screen flex flex-col justify-center items-center px-6">
     <div id="slide-container" class="flex flex-col items-center">
-      <img id="slide" src="1.png" alt="Diapositiva actual" class="object-contain rounded shadow-md transition-all duration-300" />
+      <img id="slide" src="1.png" alt="Diapositiva actual" class="w-full max-w-4xl h-[80vh] object-contain rounded shadow-md transition-all duration-300" />
       <p id="slide-indicator" class="mt-2 text-sm text-gray-500 dark:text-gray-400">1 / 10</p>
     </div>
   </main>
