--- a/presentacion.html
+++ b/presentacion.html
@@ -8,20 +8,23 @@
     tailwind.config = { darkMode: 'class' };
   </script>
 
-  <style>
-    :fullscreen #slide,
-    :-webkit-full-screen #slide {
-      width: 100vw;
-      height: 100vh;
-      object-fit: contain;
-      margin: 0 auto;
-      display: block;
-    }
+<style>
+  :fullscreen img#slide,
+  :-webkit-full-screen img#slide {
+    width: 100vw !important;
+    height: 100vh !important;
+    max-width: 100vw !important;
+    max-height: 100vh !important;
+    object-fit: contain;
+    margin: 0 auto;
+    display: block;
+  }
 
-    :fullscreen body {
-      background: black;
-    }
-  </style>
+  :fullscreen body {
+    background: black;
+  }
+</style>
+
 
   <script type="text/javascript">document.oncontextmenu = function(){return false;}</script>
 </head>
@@ -29,8 +32,10 @@
 
   <main class="min-h-screen flex flex-col justify-center items-center px-6">
     <div id="slide-container" class="flex flex-col items-center">
-      <img id="slide" src="1.png" alt="Diapositiva actual"
-        class="w-full max-w-4xl object-contain rounded shadow-md transition-all duration-300 h-[80vh]" />
+      
+     <img id="slide" src="1.png" alt="Diapositiva actual"
+  class="w-full max-w-4xl object-contain rounded shadow-md transition-all duration-300" />
+      
       <p id="slide-indicator" class="mt-2 text-sm text-gray-500 dark:text-gray-400">1 / 10</p>
     </div>
   </main>
@@ -99,18 +104,18 @@
       }
     };
 
-    document.addEventListener('fullscreenchange', () => {
-      const isFullscreen = !!document.fullscreenElement;
-      fullscreenBtn.textContent = isFullscreen
-        ? 'Salir de pantalla completa'
-        : 'Pantalla completa';
-
-      if (isFullscreen) {
-        slide.classList.remove('h-[80vh]');
-      } else {
-        slide.classList.add('h-[80vh]');
-      }
-    });
+   document.addEventListener('fullscreenchange', () => {
+    const isFullscreen = !!document.fullscreenElement;
+    fullscreenBtn.textContent = isFullscreen
+      ? 'Salir de pantalla completa'
+      : 'Pantalla completa';
+  
+    if (isFullscreen) {
+      slide.classList.remove('h-[80vh]');
+    } else {
+      slide.classList.add('h-[80vh]');
+    }
+  });
   </script>
 
   <!-- Mantener modo oscuro si estaba activado -->
