--- a/presentacion.html
+++ b/presentacion.html
@@ -8,35 +8,42 @@
     tailwind.config = { darkMode: 'class' };
   </script>
 
-<style>
-  :fullscreen img#slide,
-  :-webkit-full-screen img#slide {
-    width: 100vw !important;
-    height: 100vh !important;
-    max-width: 100vw !important;
-    max-height: 100vh !important;
-    object-fit: contain;
-    margin: 0 auto;
-    display: block;
-  }
+  <style>
+    :fullscreen img#slide,
+    :-webkit-full-screen img#slide {
+      width: 100vw !important;
+      height: 100vh !important;
+      max-width: 100vw !important;
+      max-height: 100vh !important;
+      object-fit: contain;
+      margin: 0 auto;
+      display: block;
+    }
 
-  :fullscreen body {
-    background: black;
-  }
-</style>
+    :fullscreen body {
+      background: black;
+    }
 
+    #slide-controls {
+      transition: opacity 0.3s ease;
+    }
+
+    #slide-controls.hidden {
+      opacity: 0;
+      pointer-events: none;
+    }
+  </style>
 
   <script type="text/javascript">document.oncontextmenu = function(){return false;}</script>
 </head>
 <body class="bg-gray-50 dark:bg-slate-900 text-gray-800 dark:text-white">
 
   <main class="min-h-screen flex flex-col justify-center items-center px-6">
-     <h1 class="text-3xl font-bold mb-8 text-center">Presentación del Proyecto</h1>
+    <h1 id="presentation-title" class="text-3xl font-bold mb-8 text-center">Presentación del Proyecto</h1>
+
     <div id="slide-container" class="flex flex-col items-center">
-      
-     <img id="slide" src="1.png" alt="Diapositiva actual"
-  class="w-full max-w-4xl object-contain rounded shadow-md transition-all duration-300" />
-      
+      <img id="slide" src="1.png" alt="Diapositiva actual"
+           class="w-full max-w-4xl object-contain rounded shadow-md transition-all duration-300 h-[80vh]" />
       <p id="slide-indicator" class="mt-2 text-sm text-gray-500 dark:text-gray-400">1 / 10</p>
     </div>
   </main>
@@ -73,6 +80,8 @@
     const nextBtn = document.getElementById('next-slide');
     const indicator = document.getElementById('slide-indicator');
     const fullscreenBtn = document.getElementById('fullscreen-btn');
+    const title = document.getElementById('presentation-title');
+    const slideControls = document.getElementById('slide-controls');
 
     const totalSlides = 10;
     let current = 1;
@@ -105,18 +114,41 @@
       }
     };
 
-   document.addEventListener('fullscreenchange', () => {
-    const isFullscreen = !!document.fullscreenElement;
-    fullscreenBtn.textContent = isFullscreen
-      ? 'Salir de pantalla completa'
-      : 'Pantalla completa';
-  
-    if (isFullscreen) {
-      slide.classList.remove('h-[80vh]');
-    } else {
-      slide.classList.add('h-[80vh]');
-    }
-  });
+    // Manejo de cambios en modo fullscreen
+    document.addEventListener('fullscreenchange', () => {
+      const isFullscreen = !!document.fullscreenElement;
+      fullscreenBtn.textContent = isFullscreen ? 'Salir de pantalla completa' : 'Pantalla completa';
+
+      // Ocultar o mostrar título
+      title.style.display = isFullscreen ? 'none' : 'block';
+
+      // Ajustar altura de imagen
+      if (isFullscreen) {
+        slide.classList.remove('h-[80vh]');
+        hideControlsAfterDelay(); // Inicia ocultamiento
+      } else {
+        slide.classList.add('h-[80vh]');
+        slideControls.classList.remove('hidden'); // Asegura que estén visibles
+      }
+    });
+
+    // Ocultar controles tras inactividad
+    let hideTimeout;
+    const hideControlsAfterDelay = () => {
+      clearTimeout(hideTimeout);
+      hideTimeout = setTimeout(() => {
+        if (document.fullscreenElement) {
+          slideControls.classList.add('hidden');
+        }
+      }, 3000);
+    };
+
+    document.addEventListener('mousemove', () => {
+      if (document.fullscreenElement) {
+        slideControls.classList.remove('hidden');
+        hideControlsAfterDelay();
+      }
+    });
   </script>
 
   <!-- Mantener modo oscuro si estaba activado -->
