--- a/techRandomSS.html
+++ b/techRandomSS.html
@@ -57,7 +57,7 @@
            </a>
 
             <a href="presentacion.html" class="text-sm font-medium text-gray-600 dark:text-slate-300 hover:text-blue-600 dark:hover:text-sky-400 transition-colors">
-              Ver presentación
+              Presentación 1
             </a>
 
             <!-- NAV: Etiqueta semántica para la navegación principal. -->
