--- a/techRandomSS.html
+++ b/techRandomSS.html
@@ -60,6 +60,10 @@
               Presentación 1
             </a>
 
+            <a href="InfografiaEstadistica.html" class="text-sm font-medium text-gray-600 dark:text-slate-300 hover:text-blue-600 dark:hover:text-sky-400 transition-colors">
+              Datos Estadísticos
+            </a>
+
             <!-- NAV: Etiqueta semántica para la navegación principal. -->
             <nav aria-label="Navegación principal">
                 <div class="flex items-center gap-4">
