--- a/presentacion.html
+++ b/presentacion.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Presentación del Proyecto</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script type="text/javascript">document.oncontextmenu = function(){return false;}</script>
   <script>
     tailwind.config = { darkMode: 'class' };
   </script>
