--- a/techRandomSS.html
+++ b/techRandomSS.html
@@ -69,6 +69,10 @@
           <a href="presentacion.html" class="text-sm font-medium text-gray-600 dark:text-slate-300 hover:text-blue-600 dark:hover:text-sky-400 transition-colors mb-2 md:mb-0">Presentación 1</a>
           <a href="presentacionDefensa.html" class="text-sm font-medium text-gray-600 dark:text-slate-300 hover:text-blue-600 dark:hover:text-sky-400 transition-colors mb-2 md:mb-0">Presentación 2</a>
           <a href="InfografiaEstadistica.html" class="text-sm font-medium text-gray-600 dark:text-slate-300 hover:text-blue-600 dark:hover:text-sky-400 transition-colors mb-2 md:mb-0">Datos Estadísticos</a>
+            
+            <a href="stack.html" class="text-sm font-medium text-gray-600 dark:text-slate-300 hover:text-blue-600 dark:hover:text-sky-400 transition-colors mb-2 md:mb-0">
+              Stack Tecnológico
+            </a>
           <button id="open-modal-button" class="text-sm font-medium text-gray-600 dark:text-slate-300 hover:text-blue-600 dark:hover:text-sky-400 transition-colors mb-2 md:mb-0">Propuesta de Valor</button>
           <button id="theme-toggle-button" class="p-2 rounded-full text-gray-500 dark:text-slate-400 hover:bg-gray-200 dark:hover:bg-slate-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 dark:focus:ring-sky-500 dark:ring-offset-slate-900">
             <svg id="theme-toggle-dark-icon" class="hidden w-5 h-5" fill="currentColor" viewBox="0 0 20 20"><path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path></svg>
